--- a/index.html
+++ b/index.html
@@ -76,5 +76,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- A tag abaixo é essencial para o Vite/Vercel carregar seu código TypeScript -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
